--- a/dam-2017/index.html
+++ b/dam-2017/index.html
@@ -1,18 +1,19 @@
 <html>
 <head>
-	<meta charset="utf-8">
-<b>DAM2017</b>
+<h1>Indice de Ejercicios de XHTML</h1>
 </head>
 <body>
-<h1>encabezado 1</h1>
-	<p>parrafo 1</p>
-<h2>encabezado 2</h2>
-			<p>parrafo 2</p>
-<h3>encabezado 3</h3>
-		<p>parrafo 3 <em>texto en cursiva</em></p>
-<h4>encabezado 4</h4>
-					<p>parrafo 4</p>
-<h5>encabezado 5</h5>
-						<p>parrafo 5</p>
+<ol>
+<li><a href="./xhtml/1.encabezados.html">Ejercicio de encabezados</a></li>
+<li><a href="./xhtml/2.enlaces.html">Ejercicio de enlaces 1</a></li>
+<li><a href="./xhtml/3.enlaces.html">Ejercicio de enlaces 2</a></li>
+<li><a href="./xhtml/4.enlaces.html">Ejercicio de enlaces 3</a></li>
+<li><a href="./xhtml/5.listacompanidada.html">Ejercicio de lista anidada</a></li>
+<li><a href="./xhtml/6.tablasencilla.html">Ejercicio de tabla sencilla</a></li>
+<li><a href="./xhtml/7.tablacomparativa.html">Ejercicio de tabla comparativa</a></li>
+<li><a href="./xhtml/8.formsencillo.html">Ejercicio de formulario sencillo</a></li>
+</ol>
+</br>
+<a href="../index.html">Volver</a>
 </body>
 </html>
