--- a/dam-2017/xhtml/3.enlaces.html
+++ b/dam-2017/xhtml/3.enlaces.html
@@ -9,9 +9,8 @@
 		<h2>Ultimos Proyectos</h2>
 		<p>hfdjskaflkjdfhasf fdsjkfjhlkdasjfh fdsakjfhdkasjh</p>
 		<a href="http://dam-2017.local/xhtml/ultiproyectos.html">Acceder a los últimos proyectos de Mi Sitio</a></br>
-		<form>
-		<label>escribe tu nombre:</label>
-		</form>
+</br>
+<a href="../index.html">Volver</a>
 	</body>
 	
 </html>
