--- a/dam-2017/xhtml/6.tablasencilla.html
+++ b/dam-2017/xhtml/6.tablasencilla.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Ejemplo tabla sencilla</title>
+		<title>Tabla sencilla</title>
 	</head>
 <body>
 	<h1>Listado de Cursos</h1>
@@ -26,6 +26,10 @@
 		<td>60</td>
 		<td>16:00 - 20:00</td>
 	</tr>
+	</table>
+</br>
+<a href="../index.html">Volver</a>
 </body>
+
 </html>
 		
