--- a/dam-2017/xhtml/2.enlaces.html
+++ b/dam-2017/xhtml/2.enlaces.html
@@ -10,5 +10,7 @@
 		<a href="http://www.ejemplo.com/informe.pdf">Enlace básico a un archivo pdf</a></br>
 		<a href="./contacto.html">Enlace básico a página de contacto.</a></br>
 		<a href="#inicio">Volver al inicio de la página</a></br>
+	</br>
+<a href="../index.html">Volver</a>
 	</body>
 </html>
