--- a/dam-2017/xhtml/7.tablacomparativa.html
+++ b/dam-2017/xhtml/7.tablacomparativa.html
@@ -9,45 +9,47 @@
 		<thead>
 			<tr>
 				<td></td>
-				 <td colspan="3">MP3 Mini</td>
-				<td colspan="2">MP3 Grande</td>
+				 <td align="center" colspan="3">MP3 Mini</td>
+				<td align="center" colspan="2">MP3 Grande</td>
 			</tr>
 		</thead>
 		<tbody>
 				<tr>
-				<td>Capacidad de Almacenamiento</td>
-				<td>4Gb</td>
-				<td>8Gb</td>
-				<td>16Gb</td>
-				<td>30Gb</td>
-				<td>80Gb</td>
+				<td align="center">Capacidad de Almacenamiento</td>
+				<td align="center">4Gb</td>
+				<td align="center">8Gb</td>
+				<td align="center">16Gb</td>
+				<td align="center">30Gb</td>
+				<td align="center">80Gb</td>
 			</tr>
 			<tr>
-				<td>Colores</td>
-				<td>1</td>
-				<td>4</td>
-				<td>1</td>
-				<td colspan="2">2</td>
+				<td align="center">Colores</td>
+				<td align="center">1</td>
+				<td align="center">4</td>
+				<td align="center">1</td>
+				<td align="center" colspan="2">2</td>
 			</tr>
 			<tr>
-				<td>Pantalla</td>
-				<td>LCD de 3cm (diagonal) con retroalimentación</td>
-				<td colspan="2"><td>LCD de 6cm (diagonal) con retroalimentación</td>
+				<td align="center">Pantalla</td>
+				<td align="center" colspan="3">LCD de 3cm (diagonal) con retroalimentación</td>
+				<td align="center" colspan="2">LCD de 6cm (diagonal) con retroalimentación</td>
 			</tr>
 			<tr>
-				<td rowspan="2">Tiempo de carga</td>
-				<td rowspan="2">Unas 3 horas</td>
-				<td>Unas 4 horas</td>
-				<td>Unas 2 horas para alcanzar el 80% de la capacidad</td>
+				<td align="center" rowspan="2">Tiempo de carga</td>
+				<td align="center" rowspan="2" colspan="3">Unas 3 horas</td>
+				<td align="center" colspan="2">Unas 4 horas</td>
+			</tr>
+			<tr>
+				<td align="center" colspan="2">Unas 2 horas para alcanzar el 80% de la capacidad</td>
 			</tr>
 		</tbody>
 			<tr>
-				<td>Precio</td>
-				<td>100€</td>
-				<td>200€</td>
-				<td>300€</td>
-				<td>400€</td>
-				<td>500€</td>
+				<td align="center">Precio</td>
+				<td align="center">100€</td>
+				<td align="center">200€</td>
+				<td align="center">300€</td>
+				<td align="center">400€</td>
+				<td align="center">500€</td>
 			</tr>
 	</table>
 </br>
