--- a/dam-2017/index.html
+++ b/dam-2017/index.html
@@ -16,13 +16,34 @@
 <li><a href="./xhtml/9.ejercicio formulario.html">Ejercicio de formulario</a></li>
 <li><a href="./xhtml/10.formulario información.html">Ejercicio formulario de información</a></li>
 </ol>
-<h1>Indice de Ejercicios de CSS</h1>
-</head>
-<body>
+<h1>Indice de Ejercicios de CSS2.1</h1>
 <ol>
 <li><a href="./css2.1/ej01/index.html">Ejercicio 1</a></li>
 <li><a href="./css2.1/ej02/index.html">Ejercicio 2</a></li>
 <li><a href="./css2.1/ej03/index.html">Ejercicio 3</a></li>
+<li><a href="./css2.1/ej04/index.html">Ejercicio 4</a></li>
+<li><a href="./css2.1/ej05/index.html">Ejercicio 5</a></li>
+<li><a href="./css2.1/ej06/index.html">Ejercicio 6</a></li>
+<li><a href="./css2.1/ej07/index.html">Ejercicio 7</a></li>
+<li><a href="./css2.1/ej08/index.html">Ejercicio 8</a></li>
+<li><a href="./css2.1/ej09/index.html">Ejercicio 9</a></li>
+<li><a href="./css2.1/ej10/index.html">Ejercicio 10</a></li>
+<li><a href="./css2.1/ej11/index.html">Ejercicio 11</a></li>
+<li><a href="./css2.1/final/index.html">Ejercicio Final</a></li>
+</ol>
+<h1>Indice de Ejercicios de CSS3</h1>
+<ol>
+<li><a href="./css3/ej01/index.html">Ejercicio 1</a></li>
+<li><a href="./css3/ej02/index.html">Ejercicio 2</a></li>
+<li><a href="./css3/ej03/index.html">Ejercicio 3</a></li>
+<li><a href="./css3/ej04/index.html">Ejercicio 4</a></li>
+<li><a href="./css3/ej05/index.html">Ejercicio 5</a></li>
+<li><a href="./css3/ej06/index.html">Ejercicio 6</a></li>
+<li><a href="./css3/ej07/index.html">Ejercicio 7</a></li>
+<li><a href="./css3/ej08/index.html">Ejercicio 8</a></li>
+<li><a href="./css3/ej09/index.html">Ejercicio 9</a></li>
+<li><a href="./css3/final01/index.html">Ejercicio Final 1</a></li>
+<li><a href="./css3/final02/index.html">Ejercicio Final 2</a></li>
 </ol>
 </br>
 <a href="../index.html">Volver</a>
